@startuml "Logique des Entités principales"
skinparam classAttributeIconSize 0
title Entités du domaine – Attributs + Méthodes

class User {
  - id
  - username
  - password
  - role
  - storeId
  --
  + isAdmin(): boolean
  + isEmployee(): boolean
}

class Store {
  - id
  - name
  - address
  --
  + getName(): string
  + getAddress(): string
}

class Product {
  - id
  - name
  - category
  - price
  --
  + updatePrice(newPrice): void
  + updateCategory(newCategory): void
}

class Inventory {
  - storeId
  - productId
  - stock
  --
  + decrementStock(qty): void
  + incrementStock(qty): void
  + isLowStock(threshold): boolean
}

class Sale {
  - id
  - userId
  - productId
  - storeId
  - quantity
  - total
  - date
  --
  + getTotal(): number
  + isFromStore(storeId): boolean
}

User --> Store
Sale --> User
Sale --> Product
Sale --> Store
Inventory --> Product
Inventory --> Store

@enduml
